HV-913 Providing new profile for the "tck-runner" module for executing the TCK with a security manager enabled